...
                          horizontal: 16,
                          vertical: 8,
                        ),
                        child: Row(
                          children: [
                            IconButton(
                              key: const Key('productdetail_back_button'),
                              tooltip: 'btn-back-product-details',
                              icon: const Icon(Icons.arrow_back),
                              onPressed: () => _handleBackNavigation(context),
                            ),
                            const Spacer(),
                            buildShareButton(),
...
